@@ -28,6 +28,8 @@
   consistent in some way (closed=1, success=0, error=-1)
 - weed is not doing its jobs, check domains
 - better website
+- get rid of printpath...
+- audit uses of MAXPATHLEN
 --------------------------------------------------------------------------------
 
 - man page: caches
