@@ -1,5 +1,7 @@
 17 July 2007
 
+* Only store shared filename (NAME_MAX) in struct shm and construct path into
+  temp dir on-the-fly. Saves (PATH_MAX - NAME_MAX) per struct.
 * Trailing newlines are now stripped from message_id tag (as they used to
   be). This makes any existing caches by message-id useless.
 * Use SO_RCVTIMEO to apply configured timeout when connecting to SSL servers
@@ -469,4 +471,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.117 2007-07-17 21:45:27 nicm Exp $
+$Id: CHANGES,v 1.118 2007-07-17 23:30:02 nicm Exp $
